--- a/ios/LettoMaxChoiceType/Info.plist
+++ b/ios/LettoMaxChoiceType/Info.plist
@@ -16,6 +16,10 @@
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>Allow saving wallpapers to your Photos.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+<string>This app needs access to your photo library to save the unlocked wallpapers.</string>
 	<key>CFBundleShortVersionString</key>
 	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
