--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -37,7 +37,7 @@ newArchEnabled=true
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
-MYAPP_UPLOAD_STORE_FILE=LettoMaxChoiceType-upload-key.keystore
+MYAPP_UPLOAD_STORE_FILE=ToGoToQuickType-upload-key.keystore
 MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
-MYAPP_UPLOAD_STORE_PASSWORD=LettoMax_2025_76secureKey
-MYAPP_UPLOAD_KEY_PASSWORD=LettoMax_2025_76secureKey
+MYAPP_UPLOAD_STORE_PASSWORD=Qw!98To77Go_Type#
+MYAPP_UPLOAD_KEY_PASSWORD=Qw!98To77Go_Type#
